kubernetes/frontend.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend
    namespace: default
spec:
    replicas: 1
    selector:
        matchLabels:
            app: frontend
    template:
        metadata:
            labels:
                app: frontend
        spec:
            containers:
                - name: frontend
                  image: ghcr.io/syl-discard/frontend:1.0.1
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 3000
                        name: web
                  resources:
                      limits:
                          cpu: 200m
                          memory: 500Mi
                      requests:
                          cpu: 200m
                          memory: 500Mi
---
apiVersion: v1
kind: Service
metadata:
    name: frontend
    namespace: default
    labels:
        app: frontend
spec:
    selector:
        app: frontend
    ports:
        - port: 3000
          targetPort: 3000
          name: web
          protocol: TCP
