kubernetes/message-db.yml
# CASSANDRA DATABASE
---
apiVersion: v1
kind: Service
metadata:
    labels:
        app: message-db
    name: message-db
spec:
    clusterIP: None
    ports:
        - port: 9042
          name: cql
    selector:
        app: message-db

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: message-db
    labels:
        app: message-db
spec:
    serviceName: message-db
    replicas: 3
    selector:
        matchLabels:
            app: message-db
    template:
        metadata:
            labels:
                app: message-db
        spec:
            automountServiceAccountToken: false # https://hub.datree.io/built-in-rules/prevent-service-account-token-auto-mount
            terminationGracePeriodSeconds: 1800
            # initContainers:
            #     - name: message-db-init
            #       image: cassandra:5.0
            #       command:
            #           [
            #               "sh",
            #               "-c",
            #               "until nslookup message-db-0.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for message-db; sleep 2; done",
            #           ]
            containers:
                - name: message-db
                  image: cassandra:5.0
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 7000
                        name: intra-node
                      - containerPort: 7001
                        name: tls-intra-node
                      - containerPort: 7199
                        name: jmx
                      - containerPort: 9042
                        name: cql
                  resources:
                      limits:
                          cpu: 500m
                          memory: 1Gi
                          ephemeral-storage: 500Mi
                      requests:
                          cpu: 500m
                          memory: 1Gi
                  securityContext:
                      capabilities:
                          add:
                              - IPC_LOCK
                  lifecycle:
                      preStop:
                          exec:
                              command:
                                  - /bin/sh
                                  - -c
                                  - nodetool drain
                  readinessProbe: # https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/#define-readiness-probes
                      exec:
                          command:
                              - cqlsh
                              - -u cassandra
                              - -p cassandra
                              - -e describe keyspaces
                      initialDelaySeconds: 15
                      timeoutSeconds: 5
                      periodSeconds: 10
                  volumeMounts:
                      - mountPath: "/var/lib/cassandra"
                        name: message-db-data
    volumeClaimTemplates:
        - metadata:
              name: message-db-data
          spec:
              accessModes: ["ReadWriteOnce"]
              storageClassName: fast
              resources:
                  requests:
                      storage: 500Mi
