kubernetes/message-service.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: message-service
    namespace: default
spec:
    replicas: 3
    selector:
        matchLabels:
            app: message-service
    template:
        metadata:
            labels:
                app: message-service
        spec:
            containers:
                - name: message-service
                  image: ghcr.io/syl-discard/message-service:main
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 8080
                        name: api
                  resources:
                      limits:
                          cpu: 200m
                          memory: 500Mi
                      requests:
                          cpu: 200m
                          memory: 500Mi
---
apiVersion: v1
kind: Service
metadata:
    name: message-service
    namespace: default
spec:
    selector:
        app: message-service
    ports:
        - port: 8080
          targetPort: 8080
          name: api
          protocol: TCP
