kubernetes/prometheus-service.yml
apiVersion: v1
kind: Service
metadata:
    name: prometheus
    labels:
        app: prometheus
spec:
    ports:
        - name: web
          port: 9090
          targetPort: web
    selector:
        app.kubernetes.io/name: prometheus
    sessionAffinity: ClientIP
