kubernetes/user-service.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: user-service
    namespace: default
spec:
    replicas: 1
    selector:
        matchLabels:
            app: user-service
    template:
        metadata:
            labels:
                app: user-service
        spec:
            containers:
                - name: user-service
                  image: ghcr.io/syl-discard/user-service:1.0.0
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 8080
                        name: api
                  resources:
                      limits:
                          cpu: 200m
                          memory: 500Mi
                      requests:
                          cpu: 200m
                          memory: 500Mi
---
apiVersion: v1
kind: Service
metadata:
    name: user-service
    namespace: default
    labels:
        app: user-api
spec:
    selector:
        app: user-service
    ports:
        - port: 8080
          targetPort: 8080
          name: api
          protocol: TCP
