kubernetes/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: dashboard-ingress
    namespace: kubernetes-dashboard
spec:
    rules:
        - host: dashboard.local
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: kubernetes-dashboard
                            port:
                                number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: discard-ingress
    namespace: default
spec:
    rules:
        - host: discard.local
          http:
              paths:
                  - path: /api/v1/message
                    pathType: Prefix
                    backend:
                        service:
                            name: message-service
                            port:
                                number: 8080
                  - path: /api/v1/user
                    pathType: Prefix
                    backend:
                        service:
                            name: user-service
                            port:
                                number: 8080
